--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       <div id="character"></div>
       <div id="block"></div>
     </div>
+    <div class="info">
+      <p>Click on the yellow square to start the game.
+        Hold "ctrl" and "R" to reset if you lose.
+      </p>
+    </div>
   </body>
   <script src="index.js"></script>
 </html>
