added a main and a container
for aligning the content to the center

--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div id="game">
-      <div id="character"></div>
-      <div id="block"></div>
-    </div>
-    <div class="info">
-      <p>
-        Click on the yellow square to start the game. Hold "ctrl" and "R" to
-        reset if you lose.
-      </p>
-    </div>
+    <main class="main">
+      <div class="container">
+        <div id="game">
+          <div id="character"></div>
+          <div id="block"></div>
+        </div>
+        <div class="info">
+          <p>
+            Click on the yellow square to start the game. Hold "ctrl" and "R" to
+            reset if you lose.
+          </p>
+        </div>
+      </div>
+    </main>
   </body>
   <script src="index.js"></script>
 </html>
